<resources>
    <string name="app_name">BeautyApp</string>
    <string name="welcome_text">Добро пожаловать в <b><i>Beauty</i></b>!</string>
    <string name="login_text">Еще нет аккаунта? <b><font color="#A2AA7B">Зарегистрироваться</font></b></string>
    <string name="register_text">Уже есть аккаунт? <b><font color="#A2AA7B">Войти</font></b></string>
    <string name="nextScreenText">Далее</string>
    <string name="welcome_text2"><i>Beauty</i> - Ваш персональный гид по уходу за кожей. Подбирайте косметику, отслеживайте процедуры и достигайте результатов вместе с нами!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="liked_product">Добавить в избранное</string>
    <string name="see_all"><u>Смотреть все</u></string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>