<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.beautyapp.ui.login.LoginFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.beautyapp.ui.welcome.WelcomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.beautyapp.ui.register.RegisterFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.beautyapp.ui.main.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_navigation_welcome"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_welcome" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.beautyapp.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_welcome"
            app:destination="@id/navigation_welcome" />
        <action
            android:id="@+id/action_splashFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>

</navigation>